kubernetes/apps/apps/fin/fin/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fin
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  labels:
    app: fin
spec:
  tls:
    - hosts:
        - fin.cloud.traunseenet.com
      secretName: fin-cert
  ingressClassName: traefik
  rules:
    - host: fin.cloud.traunseenet.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fin-api
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fin-web
                port:
                  name: http
